force-app/main/default/objects/Daily_laser__c/Daily_laser__c.object-meta.xml
<CustomObject>
    <label>Daily laser</label>
    <nameField>
        <displayFormat>DSL-{000}</displayFormat>
        <label>Daily Laser Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily laser</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>