force-app/main/default/objects/Daily_laser__c/fields/Rate_of_Goods__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Goods__c</fullName>
    <label>Rate of Goods</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>