force-app/main/default/objects/Daily_laser__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>