force-app/main/default/objects/Daily_laser__c/fields/Total_Weight_of_Goods__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_of_Goods__c</fullName>
    <label>Total Weight of Goods in ton</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>