force-app/main/default/objects/Daily_laser__c/recordTypes/Inward.recordType-meta.xml
<RecordType>
    <fullName>Inward</fullName>
    <active>true</active>
    <label>Inward</label>
</RecordType>