force-app/main/default/objects/Daily_laser__c/recordTypes/Outward.recordType-meta.xml
<RecordType>
    <fullName>Outward</fullName>
    <active>true</active>
    <label>Outward</label>
</RecordType>