force-app/main/default/objects/Daily_laser__c/listViews/Inward.listView-meta.xml
<ListView>
    <fullName>Inward</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Daily_laser__c.Inward</value>
    </filters>
    <label>Inward</label>
</ListView>