force-app/main/default/objects/Daily_laser__c/listViews/Outward.listView-meta.xml
<ListView>
    <fullName>Outward</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Daily_laser__c.Outward</value>
    </filters>
    <label>Outward</label>
</ListView>